--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  #Firebase Database
+  cloud_firestore: ^4.9.1
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.8.0
+  # firebase_auth_oauth: 
+  #   path: C:/Users/SaiSid/Downloads/Programming/Android Development/Dependency/firebase_auth_oauth-main/firebase_auth_oauth
+  aad_oauth: ^0.4.4
+  jwt_decode: ^0.3.1
+  flutter_dotenv: ^5.0.2
+  flutter_svg: ^0.23.0
+  image_picker: ^0.8.4+4
+  firebase_storage: ^11.2.6
+  path: ^1.8.0
+  intl: ^0.18.1
+  flutter_image_compress: ^2.0.4
+  provider:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -61,6 +78,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/black/
+    - lib/.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
