--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
-/lib/.env
+C:/Users/SaiSid/Downloads/Programming/Android Development/point_shoot_resolve/lib/.env
 
 # IntelliJ related
 *.iml
