--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 .history
 .svn/
 migrate_working_dir/
-C:/Users/SaiSid/Downloads/Programming/Android Development/point_shoot_resolve/lib/.env
 
 # IntelliJ related
 *.iml
@@ -43,3 +42,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# Local
+C:/Users/SaiSid/Downloads/Programming/Android Development/point_shoot_resolve/lib/.env
