--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,17 +54,20 @@ dependencies:
   provider:
   pie_chart: ^5.3.2
   flutter_speed_dial: ^7.0.0
-  # fluttertoast: ^8.2.2
   toast: ^0.2.9
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path_android: "assets/logo/PSR_Logo.png"
+  image_path_ios: "assets/logo/PSR_Logo.png"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.11.0
   
   build_runner: ^2.4.6
-  hive_generator: ^2.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -88,6 +91,7 @@ flutter:
   assets:
     - assets/images/
     - lib/.env
+    - assets/logo/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
